--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+        <ul>  
+            <li><a href="recipes/lasanga.html">Lasanga</a></li>
+            <li><a href="recipes/milksteak.html">Milk Steak</a></li>
+        </ul>
 </body>
 </html>
